
=== added

=== changed

* brushed up some hints when running `dtcw.ps1` and `dtcw`
* add environment variable `DTC_CONFIG_FILE` in `dtcw` and `dtcw.ps1` to specify a configuration file other than than `docToolchainConfig.groovy` in the project root folder.
* `collectIncludes`
** changed regexp to start with `^[A-Za-z]` as file name to allow lowercase filenames as well.

== 2.2.1 - 2023-03-05

=== fixes

* use the configured proxy when publishing labels to confluence pages
* #1054 : fix for `publishToConfluence` was broken in v2.2.0
* #1063 : fix for `exportConfluence` broken path for partial exports

=== added

* exportStructurizr Task
* automated tests for dtcw

=== changed

* automate the use of x86 emulator on apple silicon in dtcw
* updated jBake Markdown extensions and added FENCED_CODE_BLOCKS

== 2.2.0 - 2023-02-16

=== fixes

* fixed whitespace in GH issue template (which leads to errors in `htmlSanityCheck`)
* fixed ExportMarkdownSpec
* fixed GenerateDeckSpec
* fixed GenerateDeck / Reveal.js
* fixed exportEA hangs by EA v16.1
* fixed exportEA write model notes into models subfolder
* allow numeric ancestorIds for confluence export
* https://github.com/docToolchain/docToolchain/pull/951[#951 Improve DTC_PROJECT_BRANCH management]
* https://github.com/docToolchain/docToolchain/issues/976[#976 dtcw shows a fatal error when not in git repository]
* https://github.com/docToolchain/docToolchain/issues/978[#978 dtcw.ps1 does not correctly check for java version]
* https://github.com/docToolchain/docToolchain/issues/890[#890 updated documentation on "Self-Contained docToolchain"]
* Remove never used analytics.js file from docsy theme

=== added

* new Task exportConfluence
* Add `confluenceBearerToken` property
* rubyExtensions configuration
* CZ as language for downloadTemplate
* Enable to use a particular version of DTC from the wrapper by setting the environment variable 'DTC_VERSION' accordingly.