@@ -1,5 +1,6 @@
 //tag::collectIncludes[]
 import static groovy.io.FileType.*
+import static groovy.io.FileVisitResult.*
 import java.security.MessageDigest
 
 task collectIncludes(
@@ -17,7 +18,10 @@ task collectIncludes(
     }
     doLast {
         //let's search the whole project for files, not only the docs folder
-        //could be a problem with node projects :-)
+        //exclude typical system folders
+        final defaultExcludedDirectories = [
+            '.svn', '.git', '.idea', 'node_modules', '.gradle', 'build', '.github'
+        ]
 
         //running as subproject? set scandir to main project
         String scanDir_save = scanDir
@@ -51,6 +55,9 @@ task collectIncludes(
         String minPrefixLength = config.collectIncludes.minPrefixLength?:"3"
         String maxPrefixLength = config.collectIncludes.maxPrefixLength?:""
         String separatorChar = config.collectIncludes.separatorChar?:"-_"
+        def extraExcludeDirectories = config.collectIncludes.excludeDirectories?:[]
+
+        def excludedDirectories = defaultExcludedDirectories + extraExcludeDirectories
 
         String prefixRegEx = "[A-Za-z]{" + minPrefixLength + "," + maxPrefixLength + "}"
         String separatorCharRegEx = "[" + separatorChar + "]"
@@ -58,7 +65,11 @@ task collectIncludes(
 
         logger.info "considering files with this pattern: " + fileFilterRegEx
 
-        sourceFolder.traverse(type: FILES) { file ->
+        sourceFolder.traverse(
+            type: FILES,
+            preDir : { if (it.name in excludedDirectories) return SKIP_SUBTREE },
+            excludeNameFilter: excludedDirectories
+        ) { file ->
             if (file.name ==~ fileFilterRegEx) {
                 String typeRegEx = "^(" + prefixRegEx + ")" + separatorCharRegEx + ".*\$"
                 def type = file.name.replaceAll(typeRegEx,'\$1').toUpperCase()
